--- a/src/main/resources/verifCode.css
+++ b/src/main/resources/verifCode.css
@@ -4,13 +4,14 @@
 
 /* Logo Container Styles */
 .login_logo_container {
-    -fx-background-color: #132A13;
+    -fx-background-color: #2c3e50;
     -fx-alignment: center;
 }
 
 .login_logo_container Text {
     -fx-font-size: 2em;
     -fx-fill: #FFFFFF;
+    -fx-font-weight: bold;
 }
 
 .login_logo_container FontAwesomeIconView {
@@ -23,12 +24,12 @@
 }
 
 .account_selector .label {
-    -fx-text-fill: #132A13;
+    -fx-text-fill: #2c3e50;
     -fx-font-size: 1.1em;
 }
 
 .account_selector .arrow {
-    -fx-background-color: #132A13;
+    -fx-background-color: #2c3e50;
 }
 
 #choice-box-popup-menu {
@@ -58,7 +59,7 @@
 }
 
 .login_form_container Button {
-    -fx-background-color: #132A13;
+    -fx-background-color: #2c3e50;
     -fx-text-fill: #FFFFFF;
     -fx-pref-width: 350;
     -fx-pref-height: 30;
@@ -70,9 +71,16 @@
 }
 
 .error_lbl {
-    -fx-text-fill: #FF0000;
+    -fx-text-fill: #d40404;
 }
 
 .text-hover-hand:hover {
     -fx-cursor: hand;
 }
+
+/* verif code form */
+.enterCode-btn:hover {
+    -fx-background-color:#7AA95C ;
+    -fx-text-fill:#2c3e50;
+}
+
