--- a/src/main/resources/LoginGym.fxml
+++ b/src/main/resources/LoginGym.fxml
@@ -37,12 +37,13 @@
                <Font name="Berlin Sans FB" size="25.0" />
             </font>
          </Label>
-                  <Label fx:id="errorEmail_lbl" layoutX="40.0" layoutY="191.0" prefHeight="17.0" prefWidth="174.0" styleClass="error_lbl" />
+                  <Label fx:id="errorEmail_lbl" layoutX="40.0" layoutY="191.0" prefHeight="18.0" prefWidth="220.0" styleClass="error_lbl" stylesheets="loginDesign.css" />
          <TextField fx:id="si_email" layoutX="40.0" layoutY="158.0" onAction="#login" prefHeight="35.0" prefWidth="220.0" promptText="Email" styleClass="textfield" stylesheets="loginDesign.css" />
          <PasswordField fx:id="si_password" layoutX="40.0" layoutY="209.0" onAction="#login" prefHeight="35.0" prefWidth="220.0" promptText="Mot de Passe" styleClass="textfield" stylesheets="loginDesign.css" />
          <Button fx:id="si_loginBtn" layoutX="40.0" layoutY="304.0" mnemonicParsing="false" onAction="#login" prefHeight="40.0" prefWidth="220.0" styleClass="login-btn" stylesheets="loginDesign.css" text="Login" />
-            <Text fx:id="restPwd_btn" layoutX="40.0" layoutY="272.0" onMouseClicked="#restPwd" strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de Passe Oublié ?" styleClass="text-hover-hand" />
-            <Label fx:id="errorPwd_lbl" layoutX="40.0" layoutY="244.0" prefHeight="17.0" prefWidth="174.0" styleClass="error_lbl" />
+            <Text fx:id="restPwd_btn" layoutX="40.0" layoutY="272.0" onMouseClicked="#restPwd" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-hover-hand" text="Mot de Passe Oublié ?" />
+            <Label fx:id="errorPwd_lbl" layoutX="40.0" layoutY="244.0" prefHeight="18.0" prefWidth="220.0" styleClass="error_lbl" stylesheets="loginDesign.css" />
+                  <Label fx:id="errorTop_lbl" layoutX="12.0" layoutY="35.0" prefHeight="18.0" prefWidth="285.0" styleClass="error_lbl" stylesheets="loginDesign.css" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="sub_form" prefHeight="400.0" prefWidth="300.0" styleClass="side-form" stylesheets="loginDesign.css" AnchorPane.leftAnchor="0.0">
@@ -55,7 +56,7 @@
          </Label>
          <Button fx:id="sub_signupBtn" layoutX="60.0" layoutY="351.0" mnemonicParsing="false" onAction="#signupSlider" prefHeight="35.0" prefWidth="181.0" styleClass="side-btn" stylesheets="loginDesign.css" text="Sign Up" />
          <Button fx:id="sub_loginBtn" layoutX="60.0" layoutY="351.0" mnemonicParsing="false" onAction="#loginSlider" prefHeight="35.0" prefWidth="181.0" styleClass="side-btn" stylesheets="loginDesign.css" text="Sign In" visible="true" />
-         <Label fx:id="edit_label" layoutX="83.0" layoutY="316.0" text="Create Account" textFill="WHITE">
+         <Label fx:id="edit_label" layoutX="83.0" layoutY="316.0" text="Créer un compte" textFill="WHITE">
             <font>
                <Font name="Tahoma" size="20.0" />
             </font>
