--- a/src/main/resources/dashboardX.fxml
+++ b/src/main/resources/dashboardX.fxml
@@ -284,52 +284,52 @@
                    </AnchorPane>
    
                 <!--  **************************  liste des coaches  ***********************************  -->
-                   <AnchorPane layoutX="218.0">
-                       <AnchorPane fx:id="coaches_list" layoutX="30.0" layoutY="55.0" visible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<!--                   <AnchorPane layoutX="218.0">-->
+<!--                       <AnchorPane fx:id="coaches_list" layoutX="30.0" layoutY="55.0" visible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">-->
 
-                            <AnchorPane layoutX="14.0" layoutY="18.0" stylesheets="dashboardDesign.css">
-                               <styleClass>
-                                   <String fx:value="white-bg" />
-                                   <String fx:value="shadow" />
-                               </styleClass>
-                               <TableView fx:id="coaches_tableView" layoutX="22.0" layoutY="44.0" onMouseClicked="#coachesSelect" prefHeight="617.0" prefWidth="818.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="44.0">
-                                   <columns>
-                                       <TableColumn fx:id="coaches_col_coachID" prefWidth="86.0" text="Coach ID" />
-                                       <TableColumn fx:id="coaches_col_nom" prefWidth="164.0" text="Nom Complet" />
-                                       <TableColumn fx:id="coaches_col_email" minWidth="8.0" prefWidth="212.0" text="Email" />
-                                       <TableColumn fx:id="coaches_col_telephone" prefWidth="158.0" text="Telephone" />
-                                       <TableColumn fx:id="coaches_col_etat" prefWidth="103.0" text="Etat" />
-                                       <TableColumn fx:id="coaches_col_action" prefWidth="92.79998779296875" text="Action" />
-                                   </columns>
-                               </TableView>
-                  <Button layoutX="357.0" layoutY="2.0" mnemonicParsing="false" onAction="#dali" prefHeight="25.0" prefWidth="148.0" text="profile tst" />
-                  <Button fx:id="addCoach_btn" layoutX="30.0" layoutY="8.0" mnemonicParsing="false" onAction="#goToAddForm" prefHeight="25.0" prefWidth="148.0" styleClass="btn" stylesheets="dashboardDesign.css" text="Ajouter" />
-                           </AnchorPane>
-                       </AnchorPane>
-                   </AnchorPane>
+<!--                            <AnchorPane layoutX="14.0" layoutY="18.0" stylesheets="dashboardDesign.css">-->
+<!--                               <styleClass>-->
+<!--                                   <String fx:value="white-bg" />-->
+<!--                                   <String fx:value="shadow" />-->
+<!--                               </styleClass>-->
+<!--                               <TableView fx:id="coaches_tableView" layoutX="22.0" layoutY="44.0" onMouseClicked="#coachesSelect" prefHeight="617.0" prefWidth="818.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="44.0">-->
+<!--                                   <columns>-->
+<!--                                       <TableColumn fx:id="coaches_col_coachID" prefWidth="86.0" text="Coach ID" />-->
+<!--                                       <TableColumn fx:id="coaches_col_nom" prefWidth="164.0" text="Nom Complet" />-->
+<!--                                       <TableColumn fx:id="coaches_col_email" minWidth="8.0" prefWidth="212.0" text="Email" />-->
+<!--                                       <TableColumn fx:id="coaches_col_telephone" prefWidth="158.0" text="Telephone" />-->
+<!--                                       <TableColumn fx:id="coaches_col_etat" prefWidth="103.0" text="Etat" />-->
+<!--                                       <TableColumn fx:id="coaches_col_action" prefWidth="92.79998779296875" text="Action" />-->
+<!--                                   </columns>-->
+<!--                               </TableView>-->
+<!--                  <Button layoutX="357.0" layoutY="2.0" mnemonicParsing="false" onAction="#dali" prefHeight="25.0" prefWidth="148.0" text="profile tst" />-->
+<!--                  <Button fx:id="addCoach_btn" layoutX="30.0" layoutY="8.0" mnemonicParsing="false" onAction="#goToAddForm" prefHeight="25.0" prefWidth="148.0" styleClass="btn" stylesheets="dashboardDesign.css" text="Ajouter" />-->
+<!--                           </AnchorPane>-->
+<!--                       </AnchorPane>-->
+<!--                   </AnchorPane>-->
             <!--  **************************  liste des membres  ***********************************  -->
-<!--            <AnchorPane layoutX="218.0">-->
-<!--                <AnchorPane fx:id="membres_list" layoutX="30.0" layoutY="55.0" visible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">-->
+            <AnchorPane layoutX="218.0">
+                <AnchorPane fx:id="membres_list" layoutX="30.0" layoutY="55.0" visible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 
-<!--                    <AnchorPane layoutX="14.0" layoutY="18.0" stylesheets="dashboardDesign.css">-->
-<!--                        <styleClass>-->
-<!--                            <String fx:value="white-bg" />-->
-<!--                            <String fx:value="shadow" />-->
-<!--                        </styleClass>-->
-<!--                        <TableView fx:id="members_tableView" layoutX="22.0" layoutY="22.0" onMouseClicked="#coachesSelect" prefHeight="686.0" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="22.0">-->
-<!--                            <columns>-->
-<!--                                <TableColumn fx:id="membres_col_ID" prefWidth="86.0" text="Coach ID" />-->
-<!--                                <TableColumn fx:id="membres_col_nom" prefWidth="164.0" text="Nom Complet" />-->
-<!--                                <TableColumn fx:id="membres_col_email" minWidth="8.0" prefWidth="212.0" text="Email" />-->
-<!--                                <TableColumn fx:id="membres_col_telephone" prefWidth="158.0" text="Telephone" />-->
-<!--                                <TableColumn fx:id="membres_col_etat" prefWidth="103.0" text="Etat" />-->
-<!--                                <TableColumn fx:id="membres_col_action" prefWidth="92.79998779296875" text="Action" />-->
-<!--                            </columns>-->
-<!--                        </TableView>-->
-<!--                        <Button layoutX="74.0" mnemonicParsing="false" onAction="#dali" prefHeight="25.0" prefWidth="148.0" text="Button" />-->
-<!--                    </AnchorPane>-->
-<!--                </AnchorPane>-->
-<!--            </AnchorPane>-->
+                    <AnchorPane layoutX="14.0" layoutY="18.0" stylesheets="dashboardDesign.css">
+                        <styleClass>
+                            <String fx:value="white-bg" />
+                            <String fx:value="shadow" />
+                        </styleClass>
+                        <TableView fx:id="members_tableView" layoutX="22.0" layoutY="22.0" onMouseClicked="#coachesSelect" prefHeight="686.0" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="22.0">
+                            <columns>
+                                <TableColumn fx:id="membres_col_ID" prefWidth="86.0" text="Coach ID" />
+                                <TableColumn fx:id="membres_col_nom" prefWidth="164.0" text="Nom Complet" />
+                                <TableColumn fx:id="membres_col_email" minWidth="8.0" prefWidth="212.0" text="Email" />
+                                <TableColumn fx:id="membres_col_telephone" prefWidth="158.0" text="Telephone" />
+                                <TableColumn fx:id="membres_col_etat" prefWidth="103.0" text="Etat" />
+                                <TableColumn fx:id="membres_col_action" prefWidth="92.79998779296875" text="Action" />
+                            </columns>
+                        </TableView>
+                        <Button layoutX="74.0" mnemonicParsing="false" onAction="#dali" prefHeight="25.0" prefWidth="148.0" text="Button" />
+                    </AnchorPane>
+                </AnchorPane>
+            </AnchorPane>
 
                    <!--*******************************************  MEMBER FORM   *****************************-->
 
