--- a/src/main/resources/CheckEmail.fxml
+++ b/src/main/resources/CheckEmail.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -12,7 +13,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="login_container" stylesheets="verifCode.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.VerifCodeController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.CheckEmailController" styleClass="login_container" stylesheets="verifCode.css">
     <VBox prefHeight="400.0" prefWidth="200.0" styleClass="login_logo_container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
         <Text fill="#ef2424" strokeType="OUTSIDE" strokeWidth="0.0" text="FlexFlow" wrappingWidth="104.017578125">
             <stroke>
@@ -32,14 +33,18 @@
                 </LinearGradient>
             </stroke></Text>
     </VBox>
-    <VBox layoutX="232.0" layoutY="44.8" prefHeight="310.0" prefWidth="354.0" styleClass="login_form_container" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="45.0">
+    <VBox layoutX="232.0" layoutY="8.0" prefHeight="347.0" prefWidth="354.0" styleClass="login_form_container" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="8.0">
         <Label fx:id="error_lbl" styleClass="error_lbl" />
-        <Label fx:id="enterCode_lbl" text="veuillez entrer votre code de vérification" />
-        <TextField fx:id="code_txtfd" prefHeight="25.0" prefWidth="235.0" styleClass="input_field" />
-        <Button fx:id="enterCode_btn" mnemonicParsing="false" onAction="#verifierCode" prefHeight="25.0" prefWidth="96.0" text="Enter" styleClass="enterCode-btn" />
-        <ImageView fitHeight="221.0" fitWidth="353.0" pickOnBounds="true" preserveRatio="true">
+        <Label alignment="TOP_CENTER" contentDisplay="CENTER" style="-fx-font-weight: bold; -fx-alignment: center; -fx-font-size: 20px;" text="veuillez saisir votre email !" textAlignment="CENTER">
+            <opaqueInsets>
+                <Insets />
+            </opaqueInsets></Label>
+        <Label layoutX="10.0" layoutY="84.0" text="email" />
+        <TextField fx:id="userEmail_txtfd" layoutX="10.0" layoutY="76.0" prefHeight="25.0" prefWidth="235.0" styleClass="input_field" />
+        <Button fx:id="checkEmail_btn" mnemonicParsing="false" onAction="#goToCodeVerif" prefHeight="25.0" prefWidth="96.0" text="Enter" />
+        <ImageView fitHeight="229.0" fitWidth="354.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@undraw_Code_typing_re_p8b9.png" />
+                <Image url="@undraw_Forgot_password_re_hxwm.png" />
             </image>
         </ImageView>
     </VBox>
