--- a/src/main/resources/com/example/bty/FxmlEvenement/dashbordEvenement.fxml
+++ b/src/main/resources/com/example/bty/FxmlEvenement/dashbordEvenement.fxml
@@ -6,7 +6,7 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="700.0" minWidth="1366.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.EvenementController.DashbordEvenement">
     <AnchorPane fx:id="main_form" prefHeight="200.0" prefWidth="200.0">
-        <BorderPane layoutX="146.0" layoutY="29.0" prefHeight="600.0" prefWidth="1100.0" styleClass="border-pane" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <BorderPane layoutX="146.0" layoutY="29.0" prefHeight="600.0" prefWidth="1100.0" styleClass="border-pane" stylesheets="../../../../dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 
 
 
@@ -14,12 +14,12 @@
                 <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                     <!-- ******************************************* DASHBOARD 🙂 ***************************** -->
 
-                    <AnchorPane fx:id="dashboard_form" layoutX="143.0" layoutY="126.0" prefHeight="555.0" prefWidth="880.0" style="-fx-background-color: white;" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <AnchorPane fx:id="dashboard_form" layoutX="143.0" layoutY="126.0" prefHeight="555.0" prefWidth="880.0" style="-fx-background-color: white;" stylesheets="../../../../dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                         <children>
-                            <AnchorPane layoutX="13.0" layoutY="14.0" prefHeight="158.0" prefWidth="1115.0" stylesheets="dashboardDesign.css">
+                            <AnchorPane layoutX="13.0" layoutY="14.0" prefHeight="158.0" prefWidth="1115.0" stylesheets="../../../../dashboardDesign.css">
 
                             </AnchorPane>
-                            <AnchorPane layoutX="10.0" layoutY="234.0" prefHeight="315.0" prefWidth="861.0" stylesheets="dashboardDesign.css">
+                            <AnchorPane layoutX="18.0" layoutY="234.0" prefHeight="431.0" prefWidth="1096.0" stylesheets="../../../../dashboardDesign.css">
                                 <styleClass>
                                     <String fx:value="white-bg" />
                                     <String fx:value="shadow" />
@@ -29,7 +29,7 @@
 
                                     <AnchorPane layoutX="1.0" layoutY="39.0" prefHeight="311.0" prefWidth="860.0">
 
-                                        <TableView fx:id="tableView" layoutX="5.0" layoutY="-160.0" prefHeight="552.0" prefWidth="1098.0" xmlns:fx="http://javafx.com/fxml/1">
+                                        <TableView fx:id="tableView" layoutX="-3.0" layoutY="-160.0" prefHeight="552.0" prefWidth="1106.0" xmlns:fx="http://javafx.com/fxml/1">
                                             <columns>
                                                 <TableColumn fx:id="idCol" prefWidth="50" text="ID" />
                                                 <TableColumn fx:id="nomCol" prefWidth="100.0" text="Nom" />
@@ -48,8 +48,8 @@
                                     </AnchorPane>
                                 </children>
                             </AnchorPane>
-                            <Button fx:id="ajout_evenement" layoutX="1034.0" layoutY="40.0" mnemonicParsing="false" onAction="#ouvrirFenetreAjoutEvenement" prefHeight="30.0" prefWidth="77.0" styleClass="nav-btnproduit" stylesheets="dashboardDesign.css" text="Ajout" />
-                            <Button fx:id="actuliser_Evenement" layoutX="943.0" layoutY="40.0" mnemonicParsing="false" onAction="#reloadEvenements" prefHeight="25.0" prefWidth="77.0" styleClass="nav-btnactualiser" stylesheets="dashboardDesign.css" text="Actualiser" />
+                            <Button fx:id="ajout_evenement" layoutX="1034.0" layoutY="40.0" mnemonicParsing="false" onAction="#ouvrirFenetreAjoutEvenement" prefHeight="30.0" prefWidth="77.0" styleClass="nav-btnproduit" stylesheets="../../../../dashboardDesign.css" text="Ajout" />
+                            <Button fx:id="actuliser_Evenement" layoutX="943.0" layoutY="40.0" mnemonicParsing="false" onAction="#reloadEvenements" prefHeight="25.0" prefWidth="77.0" styleClass="nav-btnactualiser" stylesheets="../../../../dashboardDesign.css" text="Actualiser" />
                         </children>
                     </AnchorPane>
 
