--- a/src/main/resources/dashboardX.fxml
+++ b/src/main/resources/dashboardX.fxml
@@ -37,17 +37,17 @@
                         </Label>
                         <Line endX="100.0" layoutX="111.0" layoutY="152.0" startX="-100.0" stroke="WHITE" />
                         <Button fx:id="dashboard_btn" layoutX="22.0" layoutY="159.0" mnemonicParsing="false" onAction="#goToAccueil" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Acceuil" />
-                        <Button fx:id="coaches_btn" layoutX="21.0" layoutY="202.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" onAction="#goToCoach" text="Coachs" />
-                        <Button fx:id="members_btn" layoutX="23.0" layoutY="244.0" mnemonicParsing="false" onAction="#goToMembre" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css"  text="Membres"  />
-                        <Button fx:id="eventsAdmin_btn" layoutX="23.0" layoutY="287.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" onAction="#goToEvents" text="Evenements"   />
-                        <Button fx:id="coursAdmin_btn" layoutX="23.0" layoutY="330.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" onAction="#goToCours" text="Cours"  />
-                        <Button fx:id="offre_btn" onAction="#goToOffre" layoutX="23.0" layoutY="376.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Offre Coaching" />
-                        <Button fx:id="storeAdmin_btn" layoutX="23.0" layoutY="420.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" onAction="#goToStore" text="Store" />
-                        <Button fx:id="commande_btn" layoutX="22.0" layoutY="464.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" onAction="#goToCommande" text="Commande" />
+                        <Button fx:id="coaches_btn" layoutX="21.0" layoutY="202.0" mnemonicParsing="false" onAction="#goToCoach" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Coachs" />
+                        <Button fx:id="members_btn" layoutX="23.0" layoutY="244.0" mnemonicParsing="false" onAction="#goToMembre" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Membres" />
+                        <Button fx:id="eventsAdmin_btn" layoutX="23.0" layoutY="287.0" mnemonicParsing="false" onAction="#goToEvents" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Evenements" />
+                        <Button fx:id="coursAdmin_btn" layoutX="23.0" layoutY="330.0" mnemonicParsing="false" onAction="#goToCours" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Cours" />
+                        <Button fx:id="offre_btn" layoutX="23.0" layoutY="376.0" mnemonicParsing="false" onAction="#goToOffre" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Offre Coaching" />
+                        <Button fx:id="storeAdmin_btn" layoutX="23.0" layoutY="420.0" mnemonicParsing="false" onAction="#goToStore" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Store" />
+                        <Button fx:id="commande_btn" layoutX="22.0" layoutY="464.0" mnemonicParsing="false" onAction="#goToCommande" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Commande" />
                         <Line endX="100.0" layoutX="117.0" layoutY="551.0" startX="-100.0" stroke="WHITE" />
-                        <Button fx:id="profileAdmin_btn" disable="false" layoutX="20.0" layoutY="561.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Profile" />
-                        <Button fx:id="logout00_btn" layoutX="20.0" layoutY="605.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Logout" />
-                        <VBox layoutX="21.0" layoutY="655.0" prefHeight="42.0" prefWidth="180.0" styleClass="report_container">
+                        <Button fx:id="profileAdmin_btn" disable="false" layoutX="20.0" layoutY="561.0" mnemonicParsing="false" onAction="#goToProfile" prefHeight="35.0" prefWidth="84.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Profile" />
+                        <Button fx:id="logout00_btn" layoutX="117.0" layoutY="561.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="84.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Logout" />
+                        <VBox layoutX="21.0" layoutY="618.0" prefHeight="53.0" prefWidth="180.0" styleClass="report_container">
                             <children>
                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Report Suggestion/Bug?" />
 
@@ -59,7 +59,7 @@
                             </children>
                         </VBox>
 
-                        <StackPane fx:id="contentPlaceholder" AnchorPane.rightAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="220.0" AnchorPane.topAnchor="0.0" />
+                        <StackPane fx:id="contentPlaceholder" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                         <FontAwesomeIconView fill="WHITE" glyphName="HOME" layoutX="43.0" layoutY="188.0" size="20" />
                         <FontAwesomeIconView fill="WHITE" glyphName="USER" layoutX="44.0" layoutY="226.0" size="20" />
                         <FontAwesomeIconView fill="WHITE" glyphName="USERS" layoutX="40.0" layoutY="268.0" size="20" AnchorPane.leftAnchor="40.0" />
@@ -68,9 +68,8 @@
                         <FontAwesomeIconView fill="WHITE" glyphName="BOOK" layoutX="41.0" layoutY="400.0" size="20" />
                         <FontAwesomeIconView fill="WHITE" glyphName="SHOPPING_CART" layoutX="43.0" layoutY="444.0" size="20" />
                         <FontAwesomeIconView fill="WHITE" glyphName="BOOK" layoutX="42.0" layoutY="488.0" size="20" text="" />
-                        <FontAwesomeIconView fill="WHITE" glyphName="ID_CARD" layoutX="39.0" layoutY="589.0" size="20" />
                         <FontAwesomeIconView fill="WHITE" glyphName="EXTERNAL_LINK" layoutX="40.0" layoutY="633.0" size="20" />
-                        <Button fx:id="commande_btn1" layoutX="22.0" layoutY="508.0" onAction="#goToPayment" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Transaction" />
+                        <Button fx:id="commande_btn1" layoutX="22.0" layoutY="508.0" mnemonicParsing="false" onAction="#goToPayment" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Transaction" />
                         <FontAwesomeIconView fill="WHITE" glyphName="HANDSHAKE_ALT" layoutX="39.0" layoutY="532.0" size="20" />
 
                     </AnchorPane>
