--- a/src/main/resources/paiment.fxml
+++ b/src/main/resources/paiment.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="700.0" minWidth="1366.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.paimentController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="700.0" minWidth="1366.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.ProduitController.paimentController">
 
     <AnchorPane fx:id="main_form" prefHeight="200.0" prefWidth="200.0">
         <BorderPane layoutX="-8.0" layoutY="29.0" prefHeight="600.0" prefWidth="1100.0" styleClass="border-pane" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-8.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -29,7 +29,7 @@
                                             <ImageView fitHeight="215.0" fitWidth="215.0" layoutX="14.0" layoutY="88.0" preserveRatio="true">
                                                 <!-- Replace 'path_to_credit_card_image' with the actual path to your credit card image -->
                                                 <image>
-                                                    <Image url="@card.png" />
+                                                    <Image url="@com/example/bty/imagesModuleProduit/card.png" />
                                                 </image>
                                             </ImageView>
 
@@ -43,7 +43,7 @@
                                             <ImageView fitHeight="215.0" fitWidth="215.0" layoutX="14.0" layoutY="88.0" preserveRatio="true">
                                                 <!-- Replace 'path_to_credit_card_image' with the actual path to your credit card image -->
                                                 <image>
-                                                    <Image url="@card.png" />
+                                                    <Image url="@com/example/bty/imagesModuleProduit/card.png" />
                                                 </image>
                                             </ImageView>
 
@@ -58,7 +58,7 @@
                                             <ImageView fitHeight="215.0" fitWidth="215.0" layoutX="50.0" layoutY="88.0" preserveRatio="true">
                                                 <!-- Replace 'path_to_credit_card_image' with the actual path to your credit card image -->
                                                 <image>
-                                                    <Image url="@card3.jpg" />
+                                                    <Image url="@com/example/bty/imagesModuleProduit/card3.jpg" />
                                                 </image>
                                             </ImageView>
 
@@ -73,7 +73,7 @@
                                             <ImageView fitHeight="215.0" fitWidth="215.0" layoutX="94.0" layoutY="88.0" preserveRatio="true">
                                                 <!-- Replace 'path_to_credit_card_image' with the actual path to your credit card image -->
                                                 <image>
-                                                    <Image url="@card2.jpg" />
+                                                    <Image url="@com/example/bty/imagesModuleProduit/card2.jpg" />
                                                 </image>
                                             </ImageView>
 
