--- a/src/main/resources/verifCode.fxml
+++ b/src/main/resources/verifCode.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="login_container" stylesheets="verifCode.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.VerifCodeController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="login_container" stylesheets="verifCode.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.usercontroller.VerifCodeController">
     <VBox prefHeight="400.0" prefWidth="200.0" styleClass="login_logo_container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
         <Text fill="#ef2424" strokeType="OUTSIDE" strokeWidth="0.0" text="FlexFlow" wrappingWidth="104.017578125">
             <stroke>
@@ -39,7 +39,7 @@
         <Button fx:id="enterCode_btn" mnemonicParsing="false" onAction="#verifierCode" prefHeight="25.0" prefWidth="96.0" text="Enter" styleClass="enterCode-btn" />
         <ImageView fitHeight="221.0" fitWidth="353.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@undraw_Code_typing_re_p8b9.png" />
+                <Image url="@com/example/bty/imagesUser/undraw_Code_typing_re_p8b9.png" />
             </image>
         </ImageView>
     </VBox>
