--- a/src/main/resources/CoachesForm.fxml
+++ b/src/main/resources/CoachesForm.fxml
@@ -2,21 +2,19 @@
 
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
-
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.text.Font?>
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="700.0" minWidth="1366.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.usercontroller.CoachesFormController">
 
-    <AnchorPane fx:id="main_form" prefHeight="200.0" prefWidth="200.0">
-        <BorderPane layoutX="-8.0" layoutY="29.0" prefHeight="600.0" prefWidth="1100.0" styleClass="border-pane" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-8.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="650.0" minWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.usercontroller.CoachesFormController">
+
+    <AnchorPane fx:id="main_form" prefHeight="700.0" prefWidth="800.0">
+        <BorderPane layoutX="138.4" layoutY="29.0" prefHeight="700.0" prefWidth="800.0" styleClass="border-pane" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="138.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 
 
 
@@ -25,8 +23,8 @@
                     <!--*******************************************  DASHBOARD 🙂   *****************************-->
                     <AnchorPane fx:id="dashboard_form" layoutX="143.0" layoutY="-6.0" prefHeight="706.0" prefWidth="1374.0" style="-fx-background-color: white;" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-6.0">
                         <children>
-                            <AnchorPane fx:id="coaches_form" layoutX="6.0" prefHeight="750.0" prefWidth="1100.0" visible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                <AnchorPane layoutX="218.0" layoutY="14.0" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="-853.0" AnchorPane.topAnchor="22.0">
+                            <AnchorPane fx:id="coaches_form" layoutX="196.8" prefHeight="706.0" prefWidth="1106.0" visible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="197.0" AnchorPane.rightAnchor="72.0" AnchorPane.topAnchor="0.0">
+                                <AnchorPane layoutX="218.0" layoutY="14.0" prefHeight="661.0" prefWidth="858.0" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="22.0">
                                     <styleClass>
                                         <String fx:value="white-bg" />
                                         <String fx:value="shadow" />
@@ -57,8 +55,8 @@
                                         <Button fx:id="coaches_createBtn" layoutX="26.0" layoutY="283.0" mnemonicParsing="false" onAction="#coachesCreateBtn" prefHeight="43.0" prefWidth="144.0" styleClass="btn" stylesheets="dashboardDesign.css" text="Créer" />
                                         <Button fx:id="coaches_updateBtn" layoutX="180.0" layoutY="283.0" mnemonicParsing="false" onAction="#coachesUpdateBtn" prefHeight="43.0" prefWidth="144.0" styleClass="btn" stylesheets="dashboardDesign.css" text="Modifier" />
                                     </AnchorPane>
-                                    <ImageView fitHeight="401.0" fitWidth="395.0" layoutX="428.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
-                                        <Image url="@com/example/bty/imagesUser/undraw_Authentication_re_svpt.png" />
+                                    <ImageView fitHeight="401.0" fitWidth="426.0" layoutX="428.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
+                                        <Image url="@undraw_Authentication_re_svpt.png" />
                                     </ImageView>
                                 </AnchorPane>
                             </AnchorPane>
