--- a/src/main/resources/UserProfil.fxml
+++ b/src/main/resources/UserProfil.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="700.0" minWidth="1366.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.usercontroller.UserProfilController">
 
     <AnchorPane fx:id="main_form" prefHeight="200.0" prefWidth="200.0">
@@ -24,32 +25,34 @@
                                         <String fx:value="white-bg" />
                                         <String fx:value="shadow" />
                                     </styleClass>
-                                    <AnchorPane fx:id="box_1" layoutX="48.0" layoutY="181.0" prefHeight="280.0" prefWidth="350.0" stylesheets="dashboardDesign.css" AnchorPane.leftAnchor="48.0">
+                                    <AnchorPane fx:id="box_1" layoutX="48.0" layoutY="181.0" prefHeight="236.0" prefWidth="350.0" stylesheets="dashboardDesign.css" AnchorPane.leftAnchor="48.0">
                                         <styleClass>
                                             <String fx:value="white-bg" />
                                             <String fx:value="shadow" />
                                         </styleClass>
-                                        <Label layoutX="21.0" layoutY="51.0" text="Nom Complet">
-                                            <font>
-                                                <Font size="14.0" />
-                                            </font>
-                                        </Label>
-                                        <TextField fx:id="profil_name" layoutX="117.0" layoutY="49.0" prefHeight="25.0" prefWidth="148.0" styleClass="textfield" stylesheets="dashboardDesign.css" AnchorPane.leftAnchor="117.0" AnchorPane.rightAnchor="21.0" />
-                                        <Label layoutX="21.0" layoutY="93.0" text="Email">
-                                            <font>
-                                                <Font size="14.0" />
-                                            </font>
-                                        </Label>
-                                        <TextField fx:id="profil_email" layoutX="117.0" layoutY="90.0" prefHeight="25.0" prefWidth="145.0" styleClass="textfield" stylesheets="dashboardDesign.css" AnchorPane.leftAnchor="117.0" AnchorPane.rightAnchor="21.0" AnchorPane.topAnchor="90.0" />
-                                        <Label layoutX="21.0" layoutY="137.0" text="Telephone">
-                                            <font>
-                                                <Font size="14.0" />
-                                            </font>
-                                        </Label>
-                                        <TextField fx:id="profil_telephone" layoutX="117.0" layoutY="135.0" prefHeight="25.0" prefWidth="148.0" styleClass="textfield" stylesheets="dashboardDesign.css" AnchorPane.leftAnchor="117.0" AnchorPane.rightAnchor="21.0" />
-                                        <Button fx:id="coaches_updateBtn1" layoutX="38.0" layoutY="221.0" mnemonicParsing="false" onAction="#coachesUpdateBtn" prefHeight="37.0" prefWidth="251.0" styleClass="btn" stylesheets="dashboardDesign.css" text="Modifier" AnchorPane.bottomAnchor="23.0" AnchorPane.leftAnchor="46.0" AnchorPane.rightAnchor="53.0" AnchorPane.topAnchor="220.0" />
+                                        <children>
+                                            <Label layoutX="35.0" layoutY="34.0" text="Nom Complet">
+                                                <font>
+                                                    <Font size="14.0" />
+                                                </font>
+                                            </Label>
+                                            <TextField fx:id="profil_name" layoutX="131.0" layoutY="32.0" prefHeight="26.0" prefWidth="180.0" styleClass="textfield" stylesheets="dashboardDesign.css" />
+                                            <Label layoutX="35.0" layoutY="76.0" text="Email">
+                                                <font>
+                                                    <Font size="14.0" />
+                                                </font>
+                                            </Label>
+                                            <TextField fx:id="profil_email" layoutX="131.0" layoutY="73.0" prefHeight="26.0" prefWidth="180.0" styleClass="textfield" stylesheets="dashboardDesign.css" />
+                                            <Label layoutX="35.0" layoutY="120.0" text="Telephone">
+                                                <font>
+                                                    <Font size="14.0" />
+                                                </font>
+                                            </Label>
+                                            <TextField fx:id="profil_telephone" layoutX="131.0" layoutY="118.0" prefHeight="26.0" prefWidth="180.0" styleClass="textfield" stylesheets="dashboardDesign.css" />
+                                            <Button fx:id="coaches_updateBtn1" layoutX="49.0" layoutY="176.0" mnemonicParsing="false" onAction="#coachesUpdateBtn" prefHeight="37.0" prefWidth="251.0" styleClass="btn" stylesheets="dashboardDesign.css" text="Modifier" />
+                                        </children>
                                     </AnchorPane>
-                                    <AnchorPane fx:id="box_11" layoutX="427.0" layoutY="181.0" prefHeight="280.0" prefWidth="350.0" stylesheets="dashboardDesign.css">
+                                    <AnchorPane fx:id="box_11" layoutX="427.0" layoutY="181.0" prefHeight="236.0" prefWidth="350.0" stylesheets="dashboardDesign.css">
                                         <styleClass>
                                             <String fx:value="white-bg" />
                                             <String fx:value="shadow" />
@@ -69,22 +72,33 @@
                                             </Label>
                                             <PasswordField fx:id="confirm_password" layoutX="109.0" layoutY="45.0" prefHeight="26.0" prefWidth="215.0" styleClass="textfield" stylesheets="dashboardDesign.css" />
                                         </children>
-                                        <Button fx:id="profil_update" layoutX="46.0" layoutY="220.0" mnemonicParsing="false" onAction="#updatePassword" prefHeight="37.0" prefWidth="251.0" styleClass="btn" stylesheets="dashboardDesign.css" text="Changer Mot de Passe" AnchorPane.leftAnchor="46.0" AnchorPane.rightAnchor="53.0" />
+                                        <Button fx:id="profil_update" layoutX="49.0" layoutY="182.0" mnemonicParsing="false" onAction="#updatePassword" prefHeight="37.0" prefWidth="251.0" styleClass="btn" stylesheets="dashboardDesign.css" text="Changer Mot de Passe" AnchorPane.leftAnchor="49.0" AnchorPane.rightAnchor="50.19999999999999" />
                                     </AnchorPane>
                                     <ImageView fx:id="profile_img" fitHeight="116.0" fitWidth="861.0" layoutX="229.0" layoutY="58.0" pickOnBounds="true" preserveRatio="true">
                                         <image>
-                                            <Image url="@com/example/bty/imagesUser/undraw_Pic_profile_re_7g2h.png" />
+                                            <Image url="@undraw_Pic_profile_re_7g2h.png" />
                                         </image>
                                         <!--                        <clip>-->
                                         <!--                            <Circle centerX="430.5" centerY="58.0" radius="50" />-->
                                         <!--                        </clip>-->
                                     </ImageView>
                                     <Button fx:id="update_img_btn" layoutX="386.0" layoutY="69.0" mnemonicParsing="false" onAction="#updateImgBtn" prefHeight="37.0" prefWidth="125.0" styleClass="btn" stylesheets="dashboardDesign.css" text="Modifier" />
-                                    <ImageView fx:id="image" fitHeight="187.0" fitWidth="365.0" layoutX="386.0" layoutY="485.0" pickOnBounds="true" preserveRatio="true" styleClass="border-radius">
+                                    <ImageView fx:id="image" fitHeight="199.0" fitWidth="373.0" layoutX="386.0" layoutY="485.0" pickOnBounds="true" preserveRatio="true" styleClass="border-radius">
                                         <image>
-                                            <Image url="@com/example/bty/imagesUser/undraw_Personal_info_re_ur1n.png" />
+                                            <Image url="@undraw_Personal_info_re_ur1n.png" />
                                         </image>
                                     </ImageView>
+                                    <ImageView fx:id="QrCode" fitHeight="145.0" fitWidth="186.0" layoutX="57.0" layoutY="492.0" pickOnBounds="true" preserveRatio="true" />
+                                    <TextField fx:id="CodeInput" layoutX="64.0" layoutY="644.0" />
+                                    <Button fx:id="verifCode_btn" layoutX="238.0" layoutY="643.0" mnemonicParsing="false" onAction="#verifCode" prefHeight="26.0" prefWidth="110.0" styleClass="btn" stylesheets="dashboardDesign.css" text="verifier code" />
+                                    <CheckBox fx:id="checkMfa_btn" layoutX="258.0" layoutY="434.0" mnemonicParsing="false" onAction="#checked" prefHeight="18.0" prefWidth="51.0" />
+                                    <Label fx:id="error2fa_lbl" layoutX="64.0" layoutY="675.0" prefHeight="18.0" prefWidth="220.0" styleClass="error_lbl" stylesheets="loginDesign.css" />
+                                    <Label layoutX="78.0" layoutY="433.0" prefHeight="17.0" prefWidth="180.0" text="Double Authentification :">
+                                        <font>
+                                            <Font name="System Bold" size="14.0" />
+                                        </font>
+                                    </Label>
+                                    <FontAwesomeIconView glyphName="LOCK" layoutX="51.0" layoutY="450.0" size="20" />
                                 </AnchorPane>
                             </AnchorPane>
                         </children>
