--- a/src/main/resources/dashboardDesign.css
+++ b/src/main/resources/dashboardDesign.css
@@ -29,7 +29,7 @@ and open the template in the editor.
     -fx-font-weight: bold;
     -fx-font-family: 'Arial';
     -fx-font-size: 24px;
-    -fx-fill: #2c3e50; /* Couleur du texte en noir */
+    -fx-fill: #5b73e8; /* Couleur du texte en noir */
     -fx-text-alignment: center; /* Alignement du texte au centre */
     -fx-padding: 5 10 5 10; /* Ajoute du padding autour du texte */
     -fx-background-color: #f5f5f5; /* Couleur de fond */
@@ -86,7 +86,7 @@ and open the template in the editor.
 }
 
 .border-pane {
-    -fx-background-color: #2c3e50; /* Bleu */
+    -fx-background-color: #5b73e8; /* Bleu */
 }
 
 .report_container {
@@ -102,14 +102,14 @@ and open the template in the editor.
 }
 
 .nav{
-    -fx-background-color: #2c3e50;
+    -fx-background-color: #5b73e8;
     -fx-border-radius: 10;
 }
 
 .nav1{
      -fx-background-color: linear-gradient(to top right, #7AA95C , #7AA95C);
      -fx-border-radius: 10;
-     -fx-background-color: linear-gradient(to top right, #2c2c57, #2c3e50);
+     -fx-background-color: linear-gradient(to top right, #5b73e8, #5b73e8);
  }
 
 .nav2{
@@ -162,7 +162,7 @@ and open the template in the editor.
     -fx-padding: 5px;
 }
 .logout:hover{
-    -fx-background-color: #5041a7;
+    -fx-background-color: #5b73e8;
 }
 
 
@@ -171,7 +171,7 @@ and open the template in the editor.
     -fx-background-color: white	;
     -fx-background-radius: 2%; /* Applique un rayon de 50% pour rendre le fond circulaire */
     -fx-border-radius:2%;
-    -fx-border-color: #2c3e50;
+    -fx-border-color: #5b73e8;
     -fx-border-width: 1px;
 }
 
@@ -188,24 +188,24 @@ and open the template in the editor.
     -fx-background-color:WHITE; /* Bleu */
     -fx-border-radius: 15;
     -fx-background-radius:15;
-    -fx-border-color:#2c3e50; /* Couleur de bordure bleue légère */
+    -fx-border-color:#5b73e8; /* Couleur de bordure bleue légère */
     -fx-padding: 12;
     -fx-translate-y: -10;
 }
 
 .report_text {
-    -fx-fill: #2c3e50; /* Texte blanc */
+    -fx-fill: #5b73e8; /* Texte blanc */
     -fx-font-size: 15;
     -fx-font-weight: bold;
 }
 
 .report_label {
-    -fx-text-fill: #2c3e50; /* Texte blanc */
+    -fx-text-fill: #5b73e8; /* Texte blanc */
     -fx-font-size: 13;
 }
 
 .report_button {
-    -fx-background-color: #2c3e50; /* Blanc pour le bouton */
+    -fx-background-color: #5b73e8; /* Blanc pour le bouton */
     -fx-text-fill: #ffffff; /* Texte bleu pour le bouton */
     -fx-font-weight: bold;
     -fx-min-width: 30;
@@ -224,7 +224,7 @@ and open the template in the editor.
 .textfield{
     -fx-background-color: #efefef;
     -fx-background-radius: 4px;
-    -fx-border-color: linear-gradient(to top right, #2c2c57, #392b78);
+    -fx-border-color: linear-gradient(to top right, #5b73e8, #5b73e8);
     -fx-border-radius: 4px;
     -fx-border-width: .5px;
     -fx-font-family: Tahoma;
@@ -235,19 +235,19 @@ and open the template in the editor.
 }
 
 .btn{
-    -fx-background-color: #2c2c57;
+    -fx-background-color: #5b73e8;
     -fx-background-radius: 6px;
     -fx-cursor: hand;
     -fx-text-fill: #fff;
     -fx-font-size: 14px;
 }
 .btn:hover{
-    -fx-background-color: #392b78;
+    -fx-background-color: #5b73e8;
 }
 
 .table-view{
     -fx-background-color: transparent;
-    -fx-border-color: linear-gradient(to top right, #2c3e50, #2c3e50);
+    -fx-border-color: linear-gradient(to top right, #5b73e8, #5b73e8);
     -fx-border-radius: 8px;
     -fx-border-width: 2px;
     -fx-padding: 0px;
@@ -256,7 +256,7 @@ and open the template in the editor.
     -fx-alignment: CENTER;
 }
 .table-view .column-header-background{
-    -fx-background-color: linear-gradient(to top right,#2c3e50, #2c3e50);
+    -fx-background-color: linear-gradient(to top right,#5b73e8, #5b73e8);
     -fx-background-radius: 8px 8px 0px 0px;
 }
 .table-view .column-header, .filter{
@@ -281,7 +281,7 @@ and open the template in the editor.
     -fx-padding: 10;
     -fx-font-size: 12;
     -fx-text-fill: #1E0F1C;
-    -fx-border-color: #2c3e50;
+    -fx-border-color: #5b73e8;
     -fx-border-width: 1px;
 }
 
@@ -360,14 +360,14 @@ and open the template in the editor.
 }
 
 .nav{
-    -fx-background-color: linear-gradient(to top right, #2c3e50, #2c2c57);
+    -fx-background-color: linear-gradient(to top right, #5b73e8, #5b73e8);
 }
 .nav-border{
     -fx-border-color: #000;
     -fx-border-width: 0px .2px .4px .4px;
 }
 .nav-vbox{
-    -fx-background-color: linear-gradient(to top right,#2c3e50, #2c2c57);
+    -fx-background-color: linear-gradient(to top right,#5b73e8, #5b73e8);
     -fx-border-color: #000;
     -fx-border-width: 0px .2px .4px .4px;
 }
@@ -386,7 +386,7 @@ and open the template in the editor.
 }
 
 .logout{
-    -fx-background-color: #2c3e50;
+    -fx-background-color: #5b73e8;
     -fx-cursor:hand;
     -fx-background-radius: 50px;
     -fx-padding: 5px;
@@ -407,7 +407,7 @@ and open the template in the editor.
 .textfield{
     -fx-background-color: #efefef;
     -fx-background-radius: 4px;
-    -fx-border-color: linear-gradient(to top right, #2c3e50, #2c2c57);
+    -fx-border-color: linear-gradient(to top right, #5b73e8, #5b73e8);
     -fx-border-radius: 4px;
     -fx-border-width: .5px;
     -fx-font-family: Tahoma;
@@ -425,12 +425,12 @@ and open the template in the editor.
     -fx-font-size: 14px;
 }
 .btn:hover{
-    -fx-background-color: #2c3e50;
+    -fx-background-color: #5b73e8;
 }
 
 .table-view{
     -fx-background-color: transparent;
-    -fx-border-color: linear-gradient(to top right,  #2c3e50, #2c2c57);
+    -fx-border-color: linear-gradient(to top right,  #5b73e8, #5b73e8);
     -fx-border-radius: 8px;
     -fx-border-width: 2px;
     -fx-padding: 0px;
@@ -439,7 +439,7 @@ and open the template in the editor.
     -fx-alignment: CENTER;
 }
 .table-view .column-header-background{
-    -fx-background-color: linear-gradient(to top right, #2c3e50, #2c2c57);
+    -fx-background-color: linear-gradient(to top right, #5b73e8, #5b73e8);
     -fx-background-radius: 8px 8px 0px 0px;
 }
 .table-view .column-header, .filter{
