--- a/src/main/resources/verifCode.css
+++ b/src/main/resources/verifCode.css
@@ -4,7 +4,7 @@
 
 /* Logo Container Styles */
 .login_logo_container {
-    -fx-background-color: #2c3e50;
+    -fx-background-color: #5b73e8;
     -fx-alignment: center;
 }
 
@@ -24,12 +24,12 @@
 }
 
 .account_selector .label {
-    -fx-text-fill: #2c3e50;
+    -fx-text-fill: #5b73e8;
     -fx-font-size: 1.1em;
 }
 
 .account_selector .arrow {
-    -fx-background-color: #2c3e50;
+    -fx-background-color: #5b73e8;
 }
 
 #choice-box-popup-menu {
@@ -59,7 +59,7 @@
 }
 
 .login_form_container Button {
-    -fx-background-color: #2c3e50;
+    -fx-background-color: #5b73e8;
     -fx-text-fill: #FFFFFF;
     -fx-pref-width: 350;
     -fx-pref-height: 30;
@@ -81,5 +81,5 @@
 /* verif code form */
 .enterCode-btn:hover {
     -fx-background-color:#7AA95C ;
-    -fx-text-fill:#2c3e50;
+    -fx-text-fill:#5b73e8;
 }
