--- a/src/main/resources/Styles/tableStyle.css
+++ b/src/main/resources/Styles/tableStyle.css
@@ -1,6 +1,6 @@
 
 .card-container {
-    -fx-background-color: #2c3e50;
+    -fx-background-color: #5b73e8;
     -fx-border-radius: 10;
     -fx-padding: 20;
     -fx-min-width: 200;
@@ -40,7 +40,7 @@
 
 .label {
     -fx-font-size: 15px;
-    -fx-text-fill: #2c3e50;
+    -fx-text-fill: #5b73e8;
     -fx-padding: 5 0 5 0;
     -fx-font-family: 'Segoe UI', Tahoma, Geneva, Verdana;
     -fx-font-weight: bold;
@@ -72,11 +72,11 @@
 }
 
 .upload-button {
-    -fx-background-color: #2c3e50;
+    -fx-background-color: #5b73e8;
 }
 
 .envoyer-button:hover {
-    -fx-background-color: #2c3e50;
+    -fx-background-color: #5b73e8;
 }
 
 .upload-button:hover {
