--- a/src/main/resources/Styles/AjouterReclamation.css
+++ b/src/main/resources/Styles/AjouterReclamation.css
@@ -10,7 +10,7 @@
 
 }
 .label-titre{
-    -fx-text-fill: #2c3e50;
+    -fx-text-fill: #5b73e8;
     -fx-font-family: 'Arial', sans-serif;
     -fx-font-weight: bold;
 }
@@ -25,5 +25,5 @@
     -fx-text-fill: white;
 }
 .ajouter-button:hover {
-    -fx-background-color: #2c3e50;
+    -fx-background-color: #5b73e8;
 }
